--- a/admin/adminCoordonnee.html
+++ b/admin/adminCoordonnee.html
@@ -56,10 +56,10 @@
                     <i class="fas fa-gift mr-3"></i>
                     Bonus
                 </a>
-                <a href="/auth/login.html" class="flex items-center px-6 py-3 text-red-600 hover:bg-red-50 transition-colors mt-8">
+                <button id="deco" class="w-full flex items-center px-6 py-3 text-red-600 hover:bg-red-50 transition-colors mt-8">
                     <i class="fas fa-sign-out-alt mr-3"></i>
                     Déconnexion
-                </a>
+                </button>
             </nav>
         </aside>
 
